# quicksight-mcp

./: .env  .env.example  COVERAGE_REPORT.md  README.md  TEST_COVERAGE_REPORT.md  main.py  pyproject.toml  refactor_tools.py  test_setup.py
quicksight_mcp/: __init__.py  config.py  server.py
quicksight_mcp/models/: __init__.py  analysis.py  dashboard.py  dataset.py  datasource.py  ingestion.py  template.py  theme.py  tool_models.py
quicksight_mcp/services/: __init__.py  analysis.py  dashboard.py  dataset.py  datasource.py  embed.py  ingestion.py  quicksight.py  search.py  template.py  theme.py
quicksight_mcp/tools/: __init__.py  analysis.py  dashboard.py  dataset.py  datasource.py  discovery.py  embed.py  ingestion.py  search.py  template.py  theme.py
tests/unit/: test_config.py  test_models.py  test_server.py
tests/unit/models/: test_model_api_params.py
tests/unit/services/: test_analysis.py  test_dashboard.py  test_dataset.py  test_datasource.py  test_ingestion.py  test_quicksight.py  test_service_updates.py  test_template_theme.py
tests/unit/tools/: __init__.py  test_tool_registration.py
