[project]
name = "quicksight-mcp"
version = "0.2.0"
description = "Amazon QuickSight MCP Server for AI Dashboard Generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.0",
    "mcp[cli]>=1.25.0",
]

[project.optional-dependencies]
server = [
    "uvicorn>=0.40.0",
    "fastapi>=0.115.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
quicksight-mcp = "main:main"

[tool.uv.workspace]
members = [
    "quicksight-mcp",
]
